# project1-tds-t3-2025

./: .dockerignore  .gitignore  Dockerfile  Kaggle.ipynb  QUICKSTART.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test.py  test_api.py  test_validation.py
utils/: __init__.py  api_notifier.py  code_generator.py  config.py  github_manager.py  validation.py
