[project]
name = "project1-tds-t3-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "flask>=3.1.2",
    "uvicorn>=0.30.0",
    "openai>=2.1.0",
    "pygithub>=2.8.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
